# hs-emails

./: CHANGELOG.md  README.md  jolharg-emails.cabal
lib/Email/: Verify.hs  Welcome.hs
