cabal-version:      3.4
name:               jolharg-emails
version:            0.1.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Email.Email
    Email.Forgot
    Email.PasswordReset
    Email.Verify
    Email.Welcome

  -- other-extensions:
  build-depends:
    , base                >=4.12 && <5
    , blaze-html
    , jolharg-api-types
    , jolharg-web-models
    , jolharg-web-types
    , mime-mail
    , smtp-mail
    , text

  -- , haveibeenpwned
  hs-source-dirs:     lib
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-unrecognised-warning-flags -Wno-missed-specialisations

test-suite jolharg-emails-test
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax
  main-is:            Spec.hs
  ghc-options:
    -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -Weverything
    -Wno-unsafe -Wno-safe -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations
  build-depends:
    , base   >=4.12 && <5
    , hspec
  -- , jolharg-emails
  -- , hspec-core
  -- , hspec-expectations
  -- , HUnit
  -- , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
